bug dark mode

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -2630,3 +2630,6 @@ input[type=number] {
     left: 0px;
   }
 }
+.orderCustomerInfo{
+  background:#ffffd9;
+}
